--- a/ISGP2D3D/One.One/One.One/One.One.csproj
+++ b/ISGP2D3D/One.One/One.One/One.One.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <ProjectGuid>9ca2c988-846a-48ec-bbd5-58146d520e7f</ProjectGuid>
+    <ProjectGuid>{C45DE27A-C4F8-42D3-A04D-C2DB56641034}</ProjectGuid>
     <ProjectTypeGuids>{6D335F3A-9D43-41b4-9D22-F6F17C4BE596};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
