--- a/ISGP2D3D/One.Three.RectsAndPixels/One.Three.RectsAndPixels/One.Three.RectsAndPixels.csproj
+++ b/ISGP2D3D/One.Three.RectsAndPixels/One.Three.RectsAndPixels/One.Three.RectsAndPixels.csproj
@@ -72,9 +72,10 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Engine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Game1.cs" />
+    <Compile Include="Starter.cs" />
+    <Compile Include="GameController.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Game.ico" />
